Provide outline topics for each notebook

--- a/1 - Introduction.ipynb
+++ b/1 - Introduction.ipynb
@@ -6,11 +6,15 @@
    "source": [
     "# Data Carpentry Genomics Workshop\n",
     "## UC Santa Cruz Computational Genomics Lab\n",
-    "#### Instructors\n",
+    "\n",
+    "Background on BD2K, UCSC Genomics Institute, and Bioinformatics\n",
     "\n",
     "## Bio\n",
+    "#### John Vivian\n",
     "\n",
-    "## Goal of Data Carpentry"
+    "#### Jacob Pfeil\n",
+    "\n",
+    "## Workshop Goals"
    ]
   }
  ],
