--- a/2 - Shell and Git.ipynb
+++ b/2 - Shell and Git.ipynb
@@ -4,40 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Shell / Gitbash"
+    "# Command Line and Git"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basics"
+    "## Command Line\n",
+    "#### Basics\n",
+    "#### Advanced"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
-    "# Profile?"
+    "## Git\n",
+    "#### Understanding Git\n",
+    "#### Using Git"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
