--- a/4 - Evolution and Mutations.ipynb
+++ b/4 - Evolution and Mutations.ipynb
@@ -1,13 +1,48 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Evolution and Mutations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction to Mutations and Evolution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using materials from: http://www.datacarpentry.org/introduction-genomics/01-intro-to-dataset.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the distribution of genome sizes for all the strains?\n",
+    "\n",
+    "Is there a relationship between genome size and Cit status?\n",
+    "\n",
+    "How many base pair changes are there between the Cit+ and Cit- strains?\n",
+    "\n",
+    "What are the base pair changes between strains?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data set comes from:\n",
+    "https://github.com/datacarpentry/R-genomics/blob/gh-pages/Ecoli_metadata.csv"
+   ]
   }
  ],
  "metadata": {
