--- a/5 - Visualization.ipynb
+++ b/5 - Visualization.ipynb
@@ -1,6 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualization\n",
+    "#### Matplotlib and Seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "What is the distribution of genome sizes for all the strains?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Is there a relationship between genome size and Cit status?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
