--- a/3 - Anaconda - IPython - Dataframes.ipynb
+++ b/3 - Anaconda - IPython - Dataframes.ipynb
@@ -1,13 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Anaconda - IPython - Dataframes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Anaconda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IPython and Notebooks\n",
+    "#### IPython\n",
+    "#### Notebooks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataframes\n",
+    "#### Basic Concepts\n",
+    "#### Pandas"
+   ]
   }
  ],
  "metadata": {
