--- a/2-Shell-and-Git.ipynb
+++ b/2-Shell-and-Git.ipynb
@@ -11,10 +11,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Command Line\n",
-    "#### Basics\n",
-    "#### Advanced"
+    "![title](images/gvng.jpg)\n",
+    "*http://www.datacarpentry.org/shell-genomics/lessons/01_the_filesystem.html"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Access the shell\n",
+    "\n",
+    "### Mac\n",
+    "Applications -> Utilities -> Terminal\n",
+    "\n",
+    "### Windows\n",
+    "Download and install gitbash\n",
+    "\n",
+    "### Linux \n",
+    "Available by default"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
