Start with ssh and cloud computing section

--- a/4-Anaconda-IPython-Dataframes.ipynb
+++ b/4-Anaconda-IPython-Dataframes.ipynb
@@ -13,7 +13,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Anaconda"
+    "## Anaconda\n",
+    "\n",
+    "### Installing Anaconda\n",
+    "\n",
+    "`source ~/.bashrc`"
    ]
   },
   {
@@ -23,6 +27,14 @@
     "## IPython and Notebooks\n",
     "#### IPython\n",
     "#### Notebooks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up remote notebook\n",
+    "\n"
    ]
   },
   {
