--- a/2-SSH-and-Cloud-Computing.ipynb
+++ b/2-SSH-and-Cloud-Computing.ipynb
@@ -4,49 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Command Line and Git"
+    "# SSH and Cloud Computing\n",
+    "## SSH\n",
+    "#### Generating an SSH Key Pair\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gvng.jpg)\n",
-    "*http://www.datacarpentry.org/shell-genomics/lessons/01_the_filesystem.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## Access the shell\n",
-    "\n",
-    "### Mac\n",
-    "Applications -> Utilities -> Terminal\n",
-    "\n",
-    "### Windows\n",
-    "Download and install gitbash\n",
-    "\n",
-    "### Linux \n",
-    "Available by default"
+    "## Cloud Computing\n",
+    "#### AWS"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
    "source": [
-    "## Git\n",
-    "#### Understanding Git\n",
-    "#### Using Git"
+    "#### Connecting to a Remote System"
    ]
   }
  ],
