Add evolution information

--- a/3-Shell-and-Git.ipynb
+++ b/3-Shell-and-Git.ipynb
@@ -46,7 +46,11 @@
     "The first command we are going to look at is **ls** - list directory contents\n",
     "\n",
     "![title](images/command_line.jpg)\n",
-    "\n"
+    "\n",
+    "Try these different flags:\n",
+    "* ls --help\n",
+    "* ls --version\n",
+    "* ls -lha\n"
    ]
   },
   {
