--- a/3-Shell-and-Git.ipynb
+++ b/3-Shell-and-Git.ipynb
@@ -75,6 +75,13 @@
     "#### Understanding Git\n",
     "#### Using Git"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NIH BD2K Center for Big Data in Translational Genomics, UCSC Genomics Institute"
+   ]
   }
  ],
  "metadata": {
