--- a/4-Anaconda-IPython-Dataframes.ipynb
+++ b/4-Anaconda-IPython-Dataframes.ipynb
@@ -84,7 +84,8 @@
     "\n",
     "<img src=\"images/jupyter_logo.png\" width=250>\n",
     "\n",
-    "Jupyter notebooks used to be called IPython notebooks, but the popularity of notebooks led to the notebook framework being moved into its own project.\n"
+    "Jupyter notebooks used to be called IPython notebooks, but the popularity of notebooks led to the notebook framework being moved into its own project that now supports more languages than just Python.\n",
+    "\n"
    ]
   },
   {
@@ -102,6 +103,13 @@
     "## Dataframes\n",
     "#### Basic Concepts\n",
     "#### Pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NIH BD2K Center for Big Data in Translational Genomics, UCSC Genomics Institute"
    ]
   }
  ],
