--- a/5-Evolution-and-Mutations.ipynb
+++ b/5-Evolution-and-Mutations.ipynb
@@ -85,6 +85,13 @@
     "Data set comes from:\n",
     "https://github.com/datacarpentry/R-genomics/blob/gh-pages/Ecoli_metadata.csv"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NIH BD2K Center for Big Data in Translational Genomics, UCSC Genomics Institute"
+   ]
   }
  ],
  "metadata": {
