--- a/6-Visualization.ipynb
+++ b/6-Visualization.ipynb
@@ -46,6 +46,31 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NIH BD2K Center for Big Data in Translational Genomics, UCSC Genomics Institute"
+   ]
   }
  ],
  "metadata": {
