--- a/2-SSH-and-Cloud-Computing.ipynb
+++ b/2-SSH-and-Cloud-Computing.ipynb
@@ -4,8 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![UCSC Banner](images/ucsc_banner.png)\n",
+    "\n",
     "# SSH and Cloud Computing\n",
     "## SSH\n",
+    "\n",
+    "SSH stands for secure shell. It is a method for securely connecting to and interacting with a remote server. It works by using a cryptographic to encrypt the data before it is transferred to the server. The remote server then follows a protocol that allows the two computers to transfer the key to decrypt the data. \n",
+    "\n",
+    "## Windows\n",
+    "Windows users can use MobaXterm to emulate a secure shell environment.\n",
+    "> http://mobaxterm.mobatek.net/download-home-edition.html\n",
+    "\n",
+    "## Mac \n",
+    "Mac OS X has a built-in SSH client called Terminal. It is locatec in the Applications Utility folder. \n",
+    "\n",
     "#### Generating an SSH Key Pair\n",
     "\n",
     "\n",
@@ -14,6 +26,11 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
