--- a/1-Introduction.ipynb
+++ b/1-Introduction.ipynb
@@ -16,6 +16,13 @@
     "\n",
     "## Workshop Goals"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NIH BD2K Center for Big Data in Translational Genomics, UCSC Genomics Institute"
+   ]
   }
  ],
  "metadata": {
