Add info about sending ssh key to server

--- a/2-SSH-and-Cloud-Computing.ipynb
+++ b/2-SSH-and-Cloud-Computing.ipynb
@@ -4,21 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![UCSC Banner](images/ucsc_banner.png)\n",
+    "<img src=images/ucsc_banner.png>\n",
     "\n",
     "# SSH and Cloud Computing\n",
     "## SSH\n",
     "\n",
-    "SSH stands for secure shell. It is a method for securely connecting to and interacting with a remote server. It works by using a cryptographic to encrypt the data before it is transferred to the server. The remote server then follows a protocol that allows the two computers to transfer the key to decrypt the data. \n",
+    "SSH stands for secure shell. It allows users to connect to remote servers and issue commands. It works by encrypting data before it is transferred to the server. The remote server then follows a protocol that allows the two computers to exchange keys to decrypt the data. Here we will use an ssh client to connect to a remote server on the cloud. \n",
     "\n",
     "## Windows\n",
     "Windows users can use MobaXterm to emulate a secure shell environment.\n",
-    "> http://mobaxterm.mobatek.net/download-home-edition.html\n",
+    "> [mobaxterm](http://mobaxterm.mobatek.net/download-home-edition.html)\n",
     "\n",
     "## Mac \n",
-    "Mac OS X has a built-in SSH client called Terminal. It is locatec in the Applications Utility folder. \n",
+    "Mac OS X has a built-in SSH client called Terminal. It is located in the Applications > Utility folder. \n",
     "\n",
-    "#### Generating an SSH Key Pair\n",
+    "## Linux\n",
+    "Should already be installed, so just open up a terminal session.\n",
+    "\n",
+    "# Generating an SSH Key Pair\n",
+    "\n",
+    "While a simple password can be hacked, SSH keys are nearly impossible to decipher. This method creates two long character strings: a public and a private key. The public key is by default called id_rsa.pub and can be shared with the remote server. The private key is called id_rsa and should _never_ be shared with anyone. \n",
+    "\n",
+    "```\n",
+    "ssh-keygen -t rsa\n",
+    "Generating public/private rsa key pair.\n",
+    "Enter file in which to save the key (/home/demo/.ssh/id_rsa):\n",
+    "```\n",
+    "\n",
+    "> It's your choice whether you want to add a password. If you add a password, you have to type it in every time you use the key.\n",
+    "\n",
+    "```\n",
+    "Enter passphrase (empty for no passphrase): \n",
+    "Enter same passphrase again: \n",
+    "Your identification has been saved in /home/demo/.ssh/id_rsa.\n",
+    "Your public key has been saved in /home/demo/.ssh/id_rsa.pub.\n",
+    "The key fingerprint is:\n",
+    "4a:dd:0a:c6:35:4e:3f:ed:27:38:8c:74:44:4d:93:67 demo@a\n",
+    "The key's randomart image is:\n",
+    "+--[ RSA 2048]----+\n",
+    "|          .oo.   |\n",
+    "|         .  o.E  |\n",
+    "|        + .  o   |\n",
+    "|     . = = .     |\n",
+    "|      = S = .    |\n",
+    "|     o + = +     |\n",
+    "|      . o + o .  |\n",
+    "|           . o   |\n",
+    "|                 |\n",
+    "+-----------------+\n",
+    "```\n",
+    "\n",
+    "*https://www.digitalocean.com/community/tutorials/ssh-essentials-working-with-ssh-servers-clients-and-keys\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -30,22 +72,38 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Cloud Computing\n",
+    "\n",
+    "Basically, cloud computing is when you rent a server from a company like Amazon or Microsoft instead of purchasing your own computer. This has become more popular because companies do not have to purchase and maintain their own equioment or pay salaries for IT personel while still getting the best performance and security. Another great feature is you can scale your application based on demand.\n",
+    "\n",
+    "<img src=images/azure_logo.png>\n",
+    "\n",
+    "## Connecting to a Remote System\n",
+    "\n",
+    "We are going to provide an ip address to each student for an Azure cloud instance. We are going to use ssh to connect to the server. First, we have to send our ssh public key to the remote server. \n",
+    "\n",
+    "```\n",
+    "ssh-copy-id bd2k@123.45.56.78\n",
+    "/usr/bin/ssh-copy-id: INFO: attempting to log in with the new key(s), to filter out any that are already installed\n",
+    "/usr/bin/ssh-copy-id: INFO: 1 key(s) remain to be installed -- if you are prompted now it is to install the new keys\n",
+    "bd2k@123.45.56.78's password: \n",
+    "\n",
+    "Number of key(s) added: 1\n",
+    "\n",
+    "Now try logging into the machine, with:   \"ssh 'bd2k@123.45.56.78'\"\n",
+    "and check to make sure that only the key(s) you wanted were added.\n",
+    "```\n",
+    "> Note that this is not a real IP address\n",
+    "\n",
+    "\n",
+    "Now it should "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Cloud Computing\n",
-    "#### AWS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Connecting to a Remote System"
-   ]
   }
  ],
  "metadata": {
