--- a/3-Shell-and-Git.ipynb
+++ b/3-Shell-and-Git.ipynb
@@ -27,7 +27,7 @@
     "Applications -> Utilities -> Terminal\n",
     "\n",
     "### Windows\n",
-    "Download and install gitbash\n",
+    "Download and install a terminal emulator like puTTY or MobaXterm\n",
     "\n",
     "### Linux \n",
     "Available by default"
@@ -63,7 +63,10 @@
    "metadata": {
     "collapsed": false
    },
-   "source": []
+   "source": [
+    "## Pro Practice\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
