--- a/4-Anaconda-IPython-Dataframes.ipynb
+++ b/4-Anaconda-IPython-Dataframes.ipynb
@@ -160,7 +160,8 @@
     "\n",
     "To play around with Pandas, we'll look at some data from IMDB, the internet movie database.\n",
     "\n",
-    "Download cast.csv to the **data/** directory in your forked repo with the following URL:\n"
+    "Download cast.csv to the **data/** directory in your forked repo with the following URL: <br>\n",
+    "https://drive.google.com/file/d/0ByHO8wS-fc8HTFJpZDE0T3RBcG8/view?usp=sharing"
    ]
   },
   {
@@ -1123,19 +1124,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "If you want to force a change into a dataframe, use the `inplace=True` "
+    "If you want to force a change into a dataframe, use the `inplace=True` argument."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -1191,13 +1188,14 @@
        "178104                              Soldiers of the Cross  1900"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "titles.sort_values('year', inplace=True)"
+    "titles.sort_values('year', inplace=True)\n",
+    "titles.head()"
    ]
   },
   {
