Start shell and git

--- a/2-SSH-and-Cloud-Computing.ipynb
+++ b/2-SSH-and-Cloud-Computing.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "# Cloud Computing\n",
     "\n",
-    "Basically, cloud computing is when you rent a server from a company like Amazon or Microsoft instead of purchasing your own computer. This has become more popular because companies do not have to purchase and maintain their own equioment or pay salaries for IT personel while still getting the best performance and security. Another great feature is you can scale your application based on demand.\n",
+    "Basically, cloud computing is when you rent a server from a company like Amazon, Microsoft or Google. This has become more popular because companies do not have to purchase and maintain their own equioment or pay salaries for IT personel while still getting the best performance and security. Another great feature is you can scale your application based on demand.\n",
     "\n",
     "<img src=images/azure_logo.png>\n",
     "\n",
@@ -94,16 +94,13 @@
     "Now try logging into the machine, with:   \"ssh 'bd2k@123.45.56.78'\"\n",
     "and check to make sure that only the key(s) you wanted were added.\n",
     "```\n",
-    "> Note that this is not a real IP address\n",
     "\n",
+    "> Note this is not a real IP address\n",
     "\n",
-    "Now it should "
+    "Now that the server has your public ssh key, it does not need to ask for the server password. Usually, you would send your public key before you make your instance but for this workshop we did things differently. You may still need to enter your ssh password because you encrypted your ssh key.\n",
+    "\n",
+    "<img src=images/ubuntu_welcome.png>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
