--- a/3-Shell-and-Git.ipynb
+++ b/3-Shell-and-Git.ipynb
@@ -39,9 +39,9 @@
    "source": [
     "## Basic Commands\n",
     "\n",
-    "We're going to be working with data on our remote server.\n",
+    "We're going to be working with data on a remote linux server. The interface is entirely in text, so we will need to use the command line.\n",
     "\n",
-    "After loggin on, let's explore the filesystem.\n",
+    "Log onto your server using SSH and then we are going to explore the filesystem.\n",
     "\n",
     "The first command we are going to look at is **ls** - list directory contents\n",
     "\n",
@@ -52,11 +52,6 @@
     "* ls --version\n",
     "* ls -lha\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
