Add install bash script

--- a/3-Shell-and-Git.ipynb
+++ b/3-Shell-and-Git.ipynb
@@ -50,7 +50,9 @@
     "Try these different flags:\n",
     "* ls --help\n",
     "* ls --version\n",
-    "* ls -lha\n"
+    "* ls -lha\n",
+    " \n",
+    " \n"
    ]
   },
   {
