Start git section

--- a/3-Shell-and-Git.ipynb
+++ b/3-Shell-and-Git.ipynb
@@ -23,11 +23,13 @@
    "source": [
     "## Access the shell\n",
     "\n",
+    "The shell is a basic but powerful way to interact with your computer's operating system. Running commands in a shell can be more difficult at first, but once you become more familiar with the basic commands you will find that you have much more freedom in the way you solve computing tasks. Also, most cutting-edge research tools are first developed for shell interfaces. The shell is where you input commands on the command line.\n",
+    "\n",
     "### Mac\n",
     "Applications -> Utilities -> Terminal\n",
     "\n",
     "### Windows\n",
-    "Download and install a terminal emulator like puTTY or MobaXterm\n",
+    "Download and install a terminal emulator like PuTTY or MobaXterm\n",
     "\n",
     "### Linux \n",
     "Available by default"
@@ -51,8 +53,26 @@
     "* ls --help\n",
     "* ls --version\n",
     "* ls -lha\n",
-    " \n",
-    " \n"
+    "\n",
+    "The manual page for **ls** can be found using this command:\n",
+    "```\n",
+    "man ls\n",
+    "```\n",
+    "You can search the manual page by typing / and ther search term. Try searching for what -h does by typing /-h and hitting enter. You can find all instances of the search term by typing n. Shift-N searches in the reverse direction.\n",
+    "\n",
+    "Another important command is **cd** - change directory. First, let's go to the root of the filesytem. This can be done using:\n",
+    "```\n",
+    "cd /\n",
+    "```\n",
+    "Use ls to list all of the files in your root directory. These folders have all of the programs and configuration files that make up your operating system. To go back to your home directory type:\n",
+    "```\n",
+    "cd ~\n",
+    "```\n",
+    "Another important utility is **mkdir** - make directory. Let's make a directory in our home directory called **bin**.\n",
+    "```\n",
+    "mkdir bin \n",
+    "```\n",
+    "Your ~/bin directory is a good place to store executables."
    ]
   },
   {
@@ -62,7 +82,12 @@
    },
    "source": [
     "## Pro Practice\n",
-    "\n"
+    "\n",
+    "1. Count the number of lines in data/titles.csv (look at **wc**)\n",
+    "\n",
+    "2. Remove the date and sort the titles in the file data/titles.csv in alphabetical order without overwriting the data (look at **sed** or **awk** and **sort**)\n",
+    "\n",
+    "3. Use the find command to locate a file called cpuinfo and report the number of cpus on the machine.  "
    ]
   },
   {
@@ -72,8 +97,15 @@
    },
    "source": [
     "## Git\n",
-    "#### Understanding Git\n",
-    "#### Using Git"
+    "\n",
+    "Often when you are writing code, especially when you collaborate with other programmers, you want to keep a working copy of the code base that you can revert to when you inevitably break something. A great way to merge code from several collaborators and to fix broken code while also developing new features is to use a version control system called **git**.\n",
+    "\n",
+    "<img src=images/git_fig.svg height=\"50%\" width=\"50%\">\n",
+    "\n",
+    "#### Using Git\n",
+    "\n",
+    "\n",
+    "*[Git tutorial](https://www.atlassian.com/git/tutorials/why-git/git-for-developers)"
    ]
   },
   {
