Add banner to shell section

--- a/3-Shell-and-Git.ipynb
+++ b/3-Shell-and-Git.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=images/ucsc_banner.png>\n",
+    "\n",
     "# Command Line and Git"
    ]
   },
@@ -11,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](images/gvng.jpg)\n",
+    "<img src=images/gvng.jpg height=\"75%\">\n",
     "*http://www.datacarpentry.org/shell-genomics/lessons/01_the_filesystem.html"
    ]
   },
@@ -100,12 +102,17 @@
     "\n",
     "Often when you are writing code, especially when you collaborate with other programmers, you want to keep a working copy of the code base that you can revert to when you inevitably break something. A great way to merge code from several collaborators and to fix broken code while also developing new features is to use a version control system called **git**.\n",
     "\n",
-    "<img src=images/git_fig.svg height=\"50%\" width=\"50%\">\n",
+    "<img src=images/git_fig.svg height=\"75%\" width=\"75%\">\n",
+    "*https://www.atlassian.com/git/tutorials/why-git/git-for-developers\n",
     "\n",
     "#### Using Git\n",
+    "Many computer do not come with git by default. To install git on our remote machine type in this command: \n",
     "\n",
+    "```\n",
+    "sudo apt-get install git\n",
+    "```\n",
     "\n",
-    "*[Git tutorial](https://www.atlassian.com/git/tutorials/why-git/git-for-developers)"
+    "This is a command to install many different kinds of software. It will show you all of the software to be installed and ask you if you want to continue with the installation. Type Y and enter.\n"
    ]
   },
   {
