Add git commands

--- a/3-Shell-and-Git.ipynb
+++ b/3-Shell-and-Git.ipynb
@@ -124,18 +124,36 @@
     "Go to [github](https://github.com/) and click the sign up button. This is a great place to save your code in case your laptop breaks or gets stolen. It's also a great place to collaborate on projects and to share your code with others. Git and github have special vocabulary you will need to learn to get the most out of this software. For instance, you store your code in what is called a github repository or repo.\n",
     "\n",
     "Once you have your github account set up, go to the [workshop repository](https://github.com/jvivian/BD2K-Summer-Workshop). Here is all of the code we prepared for the workshop. To make your own working copy of the repository, **fork** it by clicking the fork button. Now you own a copy of the repo you can download and make changes to. To download your workshop repo go to the terminal session that is connected to the remote server and type using your own github repo:\n",
-    "\n",
     "```\n",
     "git clone https://url/to/your/repo\n",
     "```\n",
-    "\n",
     "Let's **cd** into the repo and list the files using **ls**. Let's check the status of the repo using this command:\n",
-    "\n",
     "```\n",
     "git status\n",
     "```\n",
+    "It should say the directory is clean.\n",
     "\n",
-    "It should say the directory is clean."
+    "Now let's make a change to the repo. We will add a file that lists the contributors to the repo.\n",
+    "```\n",
+    "echo John Smith > contributors.txt \n",
+    "```\n",
+    "Run ```git status``` again and you should see that git recognizes a new file in your workspace. Now we need to add the file to the git index.\n",
+    "```\n",
+    "git add contributors.txt\n",
+    "```\n",
+    "\n",
+    "Now contributors.txt is in the index and next we want to commit the file to your local repository. At this point, we are going to add a message to our commit so that we can keep track of all the commits in the repository.\n",
+    "```\n",
+    "git commit -m 'Add a contributors file'\n",
+    "```\n",
+    "Here is a great resource for writing informative [commit messages](http://chris.beams.io/posts/git-commit/). Now that you have committed changes to your local repository, let's copy these changes to your github repository. To do this, we **push** changes to the remote repository. The remote repository is the origin for the code and master is the branch.\n",
+    "```\n",
+    "git push origin master\n",
+    "```\n",
+    "Git will prompt you for a github username and password. If someone else makes changes to your github repository, you will need to update your local repository using the **pull** command.\n",
+    "```\n",
+    "git pull origin master\n",
+    "```"
    ]
   },
   {
